# explore-persona-space-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx
app/graph/: page.tsx
app/inbox/: page.tsx
app/lit/: page.tsx
app/live/: page.tsx
app/login/: page.tsx
app/projects/: page.tsx
app/todos/: page.tsx
components/: IssueRef.tsx
components/chat/: ChatRail.tsx  ClaudeThread.tsx  ImproveChatWindow.tsx  MobileChatDrawer.tsx
components/discussion/: ClaimDiscussion.tsx  CommentThread.tsx  ConversationView.tsx  EntityComments.tsx  PresenceIndicator.tsx
components/editor/: EdgeManager.tsx  EditableBody.tsx  EditableTitle.tsx  RichBodyEditor.tsx
components/entity/: EntityLinkManager.tsx  EntitySelect.tsx  RelatedEntitiesList.tsx
components/graph/: ClaimGraph.tsx  ClaimHoverPanel.tsx  ClaimNode.tsx  EntityHoverPanel.tsx  EntityNode.tsx  dagreLayout.ts
components/improve/: ImprovementsSection.tsx
components/lit/: ClarificationForm.tsx  ItemQuestionForm.tsx  ItemStateForm.tsx  LinkReviewControls.tsx
components/nav/: AppShell.tsx  MobileNav.tsx  Sidebar.tsx
components/preset/: EmptyState.tsx  (+4 more)
db/: policies.sql  schema.ts
lib/: agent-runs.ts  client-id.ts  comment-format.ts  dev-auth.ts  entities.ts  entity-options.ts  github-kanban-results.ts  lit.ts  markdown.ts  related-entities.ts  sidecar-client.ts  tasks.ts  update-results.ts
scripts/: backfill.ts
sidecar/: .env.example  .gitignore  README.md  pyproject.toml
sidecar/eps_sidecar/: main.py
(+71 files in other folders)
